Removed slash in "/images" from index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="col-sm-8 col-md-5 text-center">
                     <span class="tt" data-bs-placement="bottom" title="Y&Z">
                         <img class="img-fluid" style="box-shadow: 0 1px 8px black;
-                        border-radius: 10px;" src="/images/main.jpg" alt="">
+                        border-radius: 10px;" src="images/main.jpg" alt="">
                     </span>
                     <a href="#photos" class="btn btn-primary mt-4">See More Photos</a>
                 </div>
@@ -89,7 +89,7 @@
                             <h4 class="card-title">Photo 1</h4>
                             <p class="lead card-subtitle">Blah blah</p>
                             <div class="container bg-secondary">
-                                <img src="/images/main.jpg" alt="" style="box-shadow: 0 1px 8px black;
+                                <img src="images/main.jpg" alt="" style="box-shadow: 0 1px 8px black;
                                 border-radius: 10px;" class="img-fluid fixed-height">
                             </div>
                             <br>
@@ -103,7 +103,7 @@
                             <h4 class="card-title">Photo 2</h4>
                             <p class="lead card-subtitle">Blah blah</p>
                             <div class="container bg-secondary">
-                                <img src="/images/airport.jpeg" alt="" style="box-shadow: 0 1px 8px black;
+                                <img src="images/airport.jpeg" alt="" style="box-shadow: 0 1px 8px black;
                                 border-radius: 10px;" class="img-fluid fixed-height">
                             </div>
                             <br>
@@ -117,7 +117,7 @@
                             <h4 class="card-title">Photo 3</h4>
                             <p class="lead card-subtitle">Blah blah</p>
                             <div class="container bg-secondary">
-                                <img src="/images/airport.jpeg" alt="" style="box-shadow: 0 1px 8px black;
+                                <img src="images/airport.jpeg" alt="" style="box-shadow: 0 1px 8px black;
                                 border-radius: 10px;" class="img-fluid fixed-height">
                             </div>
                             <br>
