removed slash from "/image.filename" from comments.html

--- a/comments.html
+++ b/comments.html
@@ -60,7 +60,7 @@
             <div class="col-sm-8 col-md-5 text-center">
                 <span class="tt" data-bs-placement="bottom" title="Y&Z">
                     <img class="img-fluid" style="box-shadow: 0 1px 8px black;
-                    border-radius: 10px;" src="/images/main.jpg" alt="">
+                    border-radius: 10px;" src="images/main.jpg" alt="">
                 </span>
             </div>
         </div>
